# px-solver

./: .gitignore  Cargo.toml  README.md  lefthook.yml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
docs/: 000-sow-index.md  001-sow-executive-summary.md  002-sow-scope.md  003-sow-deliverables.md  004-sow-data-governance.md  005-sow-privacy-security.md  006-sow-cost-constraints.md  007-sow-ai-disclaimer.md  008-sow-acceptance.md  009-sow-change-control.md  010-sow-payment-budget.md  011-sow-dual-use.md  deployment.md  dual-use-policy.md  runbook-native-bypass.md  threat-model.md
docs/adr/: 0001-record-architecture-decisions-in-adrs.md  0002-use-rust-2024-for-px-solver.md  0003-hybrid-solver-architecture.md  0004-chromiumoxide-as-browser-driver.md  0005-manual-cdp-stealth-patches.md  0006-axum-clean-architecture-layout.md  0007-api-key-and-domain-allowlist-guardrails.md  0008-dashmap-default-redis-optional-cache.md  0009-runtime-px-appid-detection.md  0010-defer-native-sensor-generator.md  0011-use-lefthook-for-git-hooks.md  0012-pxhd-parser-and-synth.md  0013-re-methodology-and-scope.md  0014-challenge-pipeline-architecture.md  0015-v1-ships-pipeline-with-perimeterx-handler-only.md  0016-xtask-for-dev-automation.md  0017-phase-aligned-versioning.md  0018-canary-scope-broaden-to-px-direct-targets.md  0019-r5-track-deep-stealth-and-synthetic-profiles.md  0020-adopt-camoufox-via-fantoccini-geckodriver.md  0021-domain-based-handler-routing.md  0022-readmit-pedidosya-to-canary-with-deep-stealth-budget.md  0023-allowlist-handler-field-supersedes-env-csv.md  0024-activate-native-px3-sensor-synthesis.md  README.md  _template.md
docs/phase/: 00-bootstrap.md  R-research.md  (+5 more)
px-auth/: Cargo.toml
px-auth/src/: lib.rs
px-auth/src/application/: check_allowlist.rs  mod.rs  verify_key.rs
px-auth/src/domain/: allowlist_entry.rs  allowlist_store.rs  audit_event.rs  audit_sink.rs  key_store.rs  mod.rs
px-auth/src/infrastructure/: audit_sink.rs  mod.rs  yaml_allowlist_store.rs  yaml_key_store.rs
px-auth/tests/: auth.rs
px-cache/: Cargo.toml
px-cache/src/: lib.rs
px-cache/src/domain/: cookie_cache.rs  metrics.rs  mod.rs
px-cache/src/infrastructure/: in_memory.rs
px-cache/tests/: in_memory.rs
px-camoufox/: Cargo.toml
px-camoufox/src/: lib.rs
px-camoufox/src/domain/: config.rs
px-camoufox/src/infrastructure/: camoufox_fetcher.rs  camoufox_pool.rs  caps.rs  fetch_script.rs  fetch_strategies.rs  mod.rs  proxy_pool.rs  sensor_capture.rs  sensor_capture_hook.js  session.rs  session_pool.rs  synthetic_user.rs
px-camoufox/tests/: capture_sensor.rs  diagnose.rs  soak.rs
px-captcha/: Cargo.toml
px-captcha/src/: lib.rs
px-cli/: Cargo.toml
px-cli/src/: cli.rs  main.rs
px-cli/src/commands/: allowlist.rs  calibrate.rs  detect.rs  keys.rs  mod.rs  serve.rs  solve.rs
px-cloudflare/: Cargo.toml
px-cloudflare/src/: cookie_extractor.rs  lib.rs
px-core/: Cargo.toml
px-core/src/: api_key_hash.rs  cache_key.rs  cookie_bundle.rs  fingerprint.rs  lib.rs  named_token.rs  px_app_id.rs  px_detection.rs  solve_outcome.rs  solve_request.rs
px-datadome/: Cargo.toml
px-datadome/src/: lib.rs
px-detector/: Cargo.toml
px-detector/src/: lib.rs
px-detector/src/domain/: detector.rs
px-detector/src/infrastructure/: mod.rs  regex_detector.rs
px-detector/tests/: detector.rs
px-detector/tests/fixtures/: README.md  hannaandersson-block.html  havenwellwithin-non-px.html  non-px-control.html  pedidosya-block.html
px-errors/: Cargo.toml
px-errors/src/: lib.rs
px-harvester/: Cargo.toml
px-harvester/src/: lib.rs
px-harvester/src/application/: harvest_page.rs  mod.rs
px-harvester/src/domain/: harvester.rs  mod.rs  stealth.rs
px-harvester/src/infrastructure/: chromiumoxide_pool.rs  mod.rs
px-harvester/src/infrastructure/stealth_bundle/: audio_noise.js  canvas_noise.js  chrome_runtime.js  mod.rs  navigator_languages.js  navigator_plugins.js  navigator_webdriver.js  permissions_query.js  webgl_vendor_renderer.js
px-native/: Cargo.toml
px-native/profiles/: eT15wiaE.toml
px-native/src/: lib.rs
px-native/src/cipher/: b64.rs  decrypt.rs  mod.rs  offsets.rs  remap.rs  secret.rs  sensor.rs  splice.rs  xor.rs
px-native/src/domain/: mod.rs  native_solver.rs
px-native/src/events/: batch.rs  calibrate.rs  identity.rs  mod.rs  model.rs
px-native/src/infrastructure/: cookies.rs  handler.rs  mod.rs  native_first.rs  not_implemented.rs  sensor_solver.rs
px-native/src/profile/: mod.rs  schema.rs
px-native/tests/: cipher_fixtures.rs  end_to_end.rs  throughput_soak.rs
px-native/tests/fixtures/cipher/: hP.json  jw.json  vL.json  vM.json  vN.json  vP.json  vQ.json
px-perimeterx/: Cargo.toml
px-perimeterx/src/: lib.rs
px-perimeterx/src/application/: mod.rs  solve_px.rs
px-perimeterx/src/domain/: mod.rs  pxhd.rs  pxhd_url.rs  sid.rs
px-perimeterx/src/infrastructure/: cookie_extractor.rs  handler.rs  mod.rs
px-pipeline/: Cargo.toml
px-pipeline/src/: lib.rs
px-pipeline/src/application/: mod.rs  run_pipeline.rs
px-pipeline/src/domain/: challenge_handler.rs  fetcher.rs  handler_outcome.rs  mod.rs  page_html.rs
px-pipeline/tests/: pipeline.rs
px-research/: README.md
px-server/: Cargo.toml
px-server/src/: lib.rs  main.rs
px-server/src/application/: fetch_endpoint.rs  mod.rs  routing.rs  solve_endpoint.rs
px-server/src/infrastructure/: mod.rs
px-server/src/infrastructure/bootstrap/: app_state.rs  dispatchers.rs  mod.rs  native_routes.rs  router.rs  server_metrics.rs
px-server/src/infrastructure/http/: dto.rs
px-server/src/infrastructure/http/handlers/: fetch.rs  health.rs  metrics.rs  mod.rs  solve.rs
px-server/tests/: cache.rs  canary_cf.rs  diagnose.rs  diagnose_turnstile.rs  pedidosya.rs  server.rs
px-server/tests/common/: mod.rs
px-turnstile/: Cargo.toml
px-types/: Cargo.toml
px-types/src/: lib.rs
px-validation/: Cargo.toml
px-validation/src/: lib.rs
scripts/: check_commit_msg.sh  check_forbidden.sh  check_loc.sh  check_loc_workspace.sh  sanitize_capture.sh  soak.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+41 files in other folders)
