[workspace]
resolver = "3"
members = [
    "px-core",
    "px-types",
    "px-errors",
    "px-validation",
    "px-cache",
    "px-detector",
    "px-harvester",
    "px-pipeline",
    "px-perimeterx",
    "px-cloudflare",
    "px-turnstile",
    "px-captcha",
    "px-datadome",
    "px-native",
    "px-auth",
    "px-server",
    "px-cli",
    "xtask",
]

[workspace.package]
version       = "1.0.0"
edition       = "2024"
rust-version  = "1.95"
license       = "AGPL-3.0-or-later"
authors       = ["KeyCode17 <m.daffa.karyudi@gmail.com>"]
repository    = "https://github.com/KeyCode17/px-solver"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
anyhow             = "1.0"
argon2             = "0.5"
async-trait        = "0.1"
chromiumoxide      = { version = "0.9" }
futures            = "0.3"
regex              = "1.11"
subtle             = "2.6"
url                = "2.5"
axum               = { version = "0.8", features = ["macros"] }
clap               = { version = "4.5", features = ["derive"] }
dashmap            = "6.1"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
serde_yaml         = "0.9"
thiserror          = "2.0"
tokio              = { version = "1.41", features = ["macros", "rt-multi-thread", "sync", "time"] }
tower              = "0.5"
tower-http         = { version = "0.6", features = ["trace"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid               = { version = "1.11", features = ["v1", "v4"] }
walkdir            = "2.5"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
