[package]
name         = "px-auth"
description  = "API-key auth + per-domain allowlist + audit log middleware"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
