[package]
name         = "px-cache"
description  = "Cookie cache port + DashMap/Redis adapters"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[features]
default = []
redis   = []

[lints]
workspace = true

[dependencies]
