[package]
name         = "px-cache"
description  = "Cookie cache port + DashMap default, optional Redis adapter"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[features]
default = []
redis   = []

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
dashmap     = { workspace = true }
px-core     = { path = "../px-core" }
px-errors   = { path = "../px-errors" }
serde       = { workspace = true }
tokio       = { workspace = true, features = ["sync", "time", "rt", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
