[package]
name         = "px-camoufox"
description  = "Camoufox (patched-Firefox) harvester via geckodriver + fantoccini (ADR-0020)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
async-trait   = { workspace = true }
fantoccini    = { workspace = true }
futures       = { workspace = true }
px-core       = { path = "../px-core" }
px-errors     = { path = "../px-errors" }
px-harvester  = { path = "../px-harvester" }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true, features = ["sync", "time", "macros", "rt", "rt-multi-thread", "process", "net", "io-util"] }
tracing       = { workspace = true }
