[package]
name         = "px-captcha"
description  = "hCaptcha / reCAPTCHA gateway — STUB (ADR-0015, feature-gated)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[features]
default = []
active  = []

[lints]
workspace = true

[dependencies]
