[package]
name         = "px-cli"
description  = "Operator CLI: solve, serve, detect, keys, allowlist"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[[bin]]
name = "px-cli"
path = "src/main.rs"

[dependencies]
