[package]
name         = "px-cli"
description  = "Operator CLI for px-solver"
publish      = false
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[[bin]]
name = "px-cli"
path = "src/main.rs"

[dependencies]
anyhow      = { workspace = true }
argon2      = { workspace = true }
clap        = { workspace = true }
px-auth     = { workspace = true }
px-detector = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
tokio       = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-std"] }
uuid        = { workspace = true }
