[package]
name         = "pxsolver-datadome"
description  = "DataDome handler — STUB v1 (ADR-0015)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[features]
default = []
active  = []

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
px-errors   = { workspace = true }
px-pipeline = { workspace = true }

[lib]
name = "px_datadome"
