[package]
name         = "pxsolver-detector"
description  = "PerimeterX detection (HTML, JS globals, block-page)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
px-core = { workspace = true }
regex   = { workspace = true }

[lib]
name = "px_detector"
