[package]
name         = "px-errors"
description  = "Centralized AppError + IntoResponse for px-solver"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
