[package]
name         = "pxsolver-errors"
description  = "Centralized AppError + IntoResponse for px-solver"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
axum      = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }

[lib]
name = "px_errors"
