[package]
name         = "px-harvester"
description  = "Vendor-agnostic Chromium pool + stealth core (chromiumoxide)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
