[package]
name         = "px-harvester"
description  = "Vendor-agnostic Chromium pool + stealth core (chromiumoxide)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
async-trait   = { workspace = true }
chromiumoxide = { workspace = true }
futures       = { workspace = true }
px-core       = { path = "../px-core" }
px-errors     = { path = "../px-errors" }
tokio         = { workspace = true, features = ["sync", "time", "macros", "rt", "rt-multi-thread"] }
tracing       = { workspace = true }
