[package]
name         = "pxsolver-native"
description  = "Native PerimeterX sensor generator — STUB (ADR-0010)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
px-core     = { workspace = true }
px-errors   = { workspace = true }

[lib]
name = "px_native"
