[package]
name         = "pxsolver-native"
description  = "Native PerimeterX sensor generator — N1 cipher core (ADR-0024)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
px-core     = { workspace = true }
px-errors   = { workspace = true }

[dev-dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }

[lib]
name = "px_native"
