[package]
name         = "px-perimeterx"
description  = "PerimeterX challenge handler (v1 marquee)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
