[package]
name         = "px-perimeterx"
description  = "PerimeterX challenge handler (v1 marquee)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
async-trait  = { workspace = true }
px-core      = { path = "../px-core" }
px-detector  = { path = "../px-detector" }
px-errors    = { path = "../px-errors" }
px-harvester = { path = "../px-harvester" }
px-pipeline  = { path = "../px-pipeline" }
tracing      = { workspace = true }
uuid         = { workspace = true }
