[package]
name         = "pxsolver-perimeterx"
description  = "PerimeterX challenge handler (v1 marquee)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
async-trait  = { workspace = true }
px-core      = { workspace = true }
px-detector  = { workspace = true }
px-errors    = { workspace = true }
px-harvester = { workspace = true }
px-pipeline  = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }

[lib]
name = "px_perimeterx"
