[package]
name         = "px-pipeline"
description  = "ChallengeHandler trait + ordered pipeline orchestrator (ADR-0014)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
px-core     = { path = "../px-core" }
px-errors   = { path = "../px-errors" }
serde       = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio      = { workspace = true, features = ["macros", "rt"] }
