[package]
name         = "px-server"
description  = "Composition root + Axum HTTP API for px-solver"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[[bin]]
name = "px-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
