[package]
name         = "px-validation"
description  = "Validated<T> extractor + validation framework for Axum"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
