[package]
name         = "px-validation"
description  = "Validated<T> Axum extractor + Validate trait"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
axum       = { workspace = true }
px-errors  = { path = "../px-errors" }
serde      = { workspace = true }
serde_json = { workspace = true }
